--- a/index.html
+++ b/index.html
@@ -11,35 +11,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Welcome to Rakon Multi-Purpose HTML5 Templates RTL Supported, built with HTML, JS, SASS, CSS3 and jQuery, RTL Supported, Easy User Experience and Responsive to all devices" />
+    content="Welcome to the Official home page of Galaxium!" />
   <meta name="keywords"
-    content="HTML, CSS, JavaScript, Bootstrap, jQuery, Rakon, Themeforest, Template, envato, SASS, SCSS, HTML5, landing page, SaaS Product, SaaS Modern,  MultiPurpose, Crypto, Currency, ICO, Hosting, Agency, Mobile, App, Interior, Charity" />
-  <meta name="author" content="Rakon - Creative Multi-Purpose HTML5 Templates" />
+    content="Crypto, Crypto Coin, Website, Money, tip.cc, Galaxium, Galaxium Coin," />
+  <meta name="author" content="Nim1com" />
 
   <title>Galaxium - The new Crypto Era</title>
   <!-- favicon -->
   <link rel="shortcut icon" href="https://orinostudio.com/assets/img/favicon.ico" type="image/x-icon" />
   <!-- Bootstrap 4.5 -->
-  <link rel="stylesheet" href="../../assets/css/bootstrap.min.css" type="text/css" />
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css" />
   <!-- animate -->
-  <link rel="stylesheet" href="../../assets/css/animate.css" type="text/css" />
+  <link rel="stylesheet" href="/assets/css/animate.css" type="text/css" />
   <!-- Swiper -->
-  <link rel="stylesheet" href="../../assets/css/swiper.min.css" />
+  <link rel="stylesheet" href="/assets/css/swiper.min.css" />
   <!-- icons -->
-  <link rel="stylesheet" href="../../assets/css/icons.css" type="text/css" />
+  <link rel="stylesheet" href="/assets/css/icons.css" type="text/css" />
   <!-- aos -->
-  <link rel="stylesheet" href="../../assets/css/aos.css" type="text/css" />
+  <link rel="stylesheet" href="/assets/css/aos.css" type="text/css" />
   <!-- main css -->
-  <link rel="stylesheet" href="../../assets/css/main.css" type="text/css" />
+  <link rel="stylesheet" href="/assets/css/main.css" type="text/css" />
   <!-- normalize -->
-  <link rel="stylesheet" href="../../assets/css/normalize.css" type="text/css" />
+  <link rel="stylesheet" href="/assets/css/normalize.css" type="text/css" />
 
-  <!-- js for Brwoser -->
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  <!-- Global site tag (gtag.js) - Google Ads: 971083070 -->
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-971083070"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -77,7 +72,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="container">
           <!-- navbar -->
           <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand c-white" href="https://orinostudio.com/index.html">
+            <a class="navbar-brand c-white" href="https://galaxium.netlify.app/">
               <img class="logo" src="https://orinostudio.com/assets/img/logo.svg" alt="logo" />
             </a>
             <button class="navbar-toggler menu ripplemenu" type="button" data-toggle="collapse"
@@ -99,7 +94,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   <a class="nav-link" href="#Features">Features</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Token">Token</a>
+                  <a class="nav-link" href="#Token">Coin</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#Roadmap">Roadmap</a>
