--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <button type="button" class="btn drop_download">
                   <span>Download</span>
                   <div class="links-btn">
-                    <a href="#">Windows</a>
-                    <a href="#">Google Play</a>
-                    <a href="#">Apple</a>
+                    <a href="#">Windows | Coming soon!</a>
+                    <a href="#">Google Play | Coming soon!</a>
+                    <a href="#">Apple | Coming soon!</a>
                   </div>
                 </button>
                 <button type="button" class="btn btn-default c-white" data-toggle="modal" data-target="#mdllLogin">
-                  Sign in
+                  Sign in | Coming soon!
                 </button>
                 <a href="signup.html" class="btn scale btn_sm_primary c-white btn_try effect-letter rounded-8">
-                  Try it Free
+                  Join The Community
                 </a>
               </div>
             </div>
