--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <a class="nav-link" href="#Features">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Token">Token</a>
+            <a class="nav-link" href="#Token">Coin</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Roadmap">Roadmap</a>
@@ -173,17 +173,16 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   </div>
                   <h1 class="c-white">A Decentralized Rakon Gateway</h1>
                   <p>
-                    The Rakon coin. project is designed to create a reliable
-                    interconnected framework between Telecom companies
+                    The Galaxium project is designed to create a Crypto Coin for 
                   </p>
                 </div>
                 <div class="button--click">
                   <button type="button"
                     class="btn btn-token wd-140 btn_md_primary scale effect-letter c-gradient mb-3 mb-sm-0">
-                    Get Token
+                    Get Coin
                   </button>
                   <button type="button" class="btn btn-token wd-140 btn_md_primary effect-letter defalult">
-                    WhitePaper
+
                   </button>
                 </div>
               </div>
