--- a/index.html
+++ b/index.html
@@ -167,11 +167,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <div class="row justify-content-md-center text-center">
               <div class="col-md-10 col-lg-6">
                 <div class="banner_title">
-                  <div class="offer">
-                    <span class="c-white">35% Discount </span>
-                    <span class="c-magenta">Purchase</span>
-                  </div>
-                  <h1 class="c-white">A Decentralized Rakon Gateway</h1>
+
+                  <h1 class="c-white">A Decentralized Blockchain</h1>
                   <p>
                     The Galaxium project is designed to create a Crypto Coin for
                   </p>
@@ -182,7 +179,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     Get Coin
                   </button>
                   <button type="button" class="btn btn-token wd-140 btn_md_primary effect-letter defalult">
-
+                    Discord
                   </button>
                 </div>
               </div>
