--- a/index.html
+++ b/index.html
@@ -352,29 +352,27 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
               <div class="col-lg-6 ml-auto mt-4 mt-lg-0">
                 <div class="title_sections">
                   <div class="before_title">
-                    <span>Rakon. Mobile</span>
+                    <span>Galaxium. Mobile</span>
                     <span>App 👌 </span>
                   </div>
                   <h2 class="c-white">
                     Install And Start Making Money Automatically
                   </h2>
                   <p>
-                    All Rakon. users with at least 1 token can install the
-                    Rakon. app and start making money from unused SMS messages
-                    automatically, all while the app is operating in the
-                    background.
+                    All Galaxium. users with at least 1 coin can install the
+                    Galaxium Mobile app.
                   </p>
                   <ul class="list-group">
                     <li class="list-group-item media border-0">
                       <i class="tio security mr-2"></i>
                       <div class="media-body">
-                        Secure transfers with verified Casinos.
+                        Secure transfers with verified Traders.
                       </div>
                     </li>
                     <li class="list-group-item media border-0">
                       <i class="tio credit_card_outlined mr-2"></i>
                       <div class="media-body">
-                        Easily buy and sell CLV within the wallet
+                        Easily buy and sell GAL within the wallet
                       </div>
                     </li>
                     <li class="list-group-item media border-0">
