--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 </div>
               </div>
               <div class="img__head">
-                <img class="illy" src="../../assets/img/crypto/crypto-head02.png" />
+                <img class="illy" src="../../assets/img/crypto/crypto-head02.png" href=“https://dsc.gg/galaxium”/>
               </div>
               <div class="col-md-10 col-lg-6">
                 <div class="Countdown-timer">
