--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <button type="button" class="btn btn-default c-white" data-toggle="modal" data-target="#mdllLogin">
                   Sign in | Coming soon!
                 </button>
-                <a href="signup.html" class="btn scale btn_sm_primary c-white btn_try effect-letter rounded-8">
+                <a href="https://dsc.gg/galaxium" class="btn scale btn_sm_primary c-white btn_try effect-letter rounded-8">
                   Join The Community
                 </a>
               </div>
