--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     class="btn btn-token wd-140 btn_md_primary scale effect-letter c-gradient mb-3 mb-sm-0">
                     Get Coin
                   </button>
-                  <button type="button" class="btn btn-token wd-140 btn_md_primary effect-letter defalult">
+                  <button type="button" class="btn btn-token wd-140 btn_md_primary effect-letter defalult" herf="https://dsc.gg/galaxium">
                     Discord
                   </button>
                 </div>
               </div>
               <div class="img__head">
-                <img class="illy" src="../../assets/img/crypto/crypto-head02.png" href=“https://dsc.gg/galaxium”/>
+                <img class="illy" src="../../assets/img/crypto/crypto-head02.png" ”/>
               </div>
               <div class="col-md-10 col-lg-6">
                 <div class="Countdown-timer">
