--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="container">
           <!-- navbar -->
           <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand c-white" href="https://galaxium.netlify.app/">
+            <a class="navbar-brand c-white" href="https://galaxium.me/">
               <img class="logo" src="https://orinostudio.com/assets/img/logo.svg" alt="logo" />
             </a>
             <button class="navbar-toggler menu ripplemenu" type="button" data-toggle="collapse"
