fixed dicord button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
 <body class="dark-currency">
   <div id="wrapper">
-    <div id="content">
       <div id="particles-js"></div>
       <!-- Start header -->
       <header class="header-nav-center crypto_dark" id="myNavbar">
@@ -178,7 +177,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     class="btn btn-token wd-140 btn_md_primary scale effect-letter c-gradient mb-3 mb-sm-0">
                     Get Coin
                   </button>
-                  <button type="button" class="btn btn-token wd-140 btn_md_primary effect-letter defalult" herf="https://dsc.gg/galaxium">
+                  <button type="button" class="btn btn-token wd-140 btn_md_primary effect-letter defalult" href="https://dsc.gg/galaxium">
                     Discord
                   </button>
                 </div>
