--- a/index.html
+++ b/index.html
@@ -232,28 +232,13 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <!-- End Banner -->
 
         <!-- Start Section Features -->
-        <section class="Feature_dark_crypto products_section product_demo2 padding-t-2 margin-t-10" id="Features">
+        <!--<section class="Feature_dark_crypto products_section product_demo2 padding-t-2 margin-t-10" id="Features">
           <div class="container">
             <div class="row">
               <div class="col-md-10 col-lg-5 margin-b-3">
                 <div class="title_sections mb-0">
-                  <div class="before_title">
-                    <span>Main Feature</span>
-                    <span>Points</span>
-                  </div>
-                  <h2 class="c-white">
-                    Multi-Faceted Blockchain Based Ecosystem
-                  </h2>
-                  <p>
-                    Coinbase has a variety of features that make it the best
-                    place to start trading
-                  </p>
-                </div>
-                <div class="button--click margin-t-4">
-                  <button type="button" class="btn btn-token btn_md_primary scale effect-letter c-gradient">
-                    Try it Free
-                  </button>
-                </div>
+
+
               </div>
               <div class="col-lg-6 ml-lg-auto">
                 <div class="row">
@@ -325,6 +310,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
               </div>
             </div>
           </div>
+        -->
           <!-- .container -->
         </section>
         <!-- End Section Features -->
