--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     <li class="list-group-item media border-0">
                       <i class="tio credit_card_outlined mr-2"></i>
                       <div class="media-body">
-                        Easily buy and sell GAL within the wallet
+                        Easily buy and sell GAX within the wallet
                       </div>
                     </li>
                     <li class="list-group-item media border-0">
@@ -369,7 +369,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                           <div>
                             <span>Download</span>
                           </div>
-                          <h4>App Store</h4>
+                          <h4>App Store | Coming Soon!</h4>
                         </div>
                       </a>
                     </div>
@@ -382,7 +382,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                           <div>
                             <span>Download</span>
                           </div>
-                          <h4>App Store</h4>
+                          <h4>App Store | Coming Soon!</h4>
                         </div>
                       </a>
                     </div>
@@ -391,7 +391,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     <a href="#" class="d-block text-decoration-none">
                       <span>Download</span>
                       <p>
-                        Windows 8,9,10
+                        Windows 8,9,10 | Coming Soon!
                       </p>
                     </a>
                     <div class="soon">*Mac app coming soon</div>
@@ -464,7 +464,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
               <!-- text -->
               <div class="col-lg-6 ml-auto">
                 <div class="title_sections margin-b-4">
-                  <h2 class="c-white">Serenity Token</h2>
+                  <h2 class="c-white">Galaxium Stats</h2>
                   <p>
                     Serenity token will be used as a right to perform work on
                     behalf of Serenity community network and acquire share in
@@ -473,16 +473,16 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 </div>
                 <div class="item_tokens">
                   <div class="name-coin">
-                    <span>Rakon. coin</span>
-                    <h3>Token Name</h3>
+                    <span>Galaxium</span>
+                    <h3>Coin Name</h3>
                   </div>
                   <div class="row margin-t-2">
                     <div class="col-md-4">
                       <div class="item_progress">
-                        <span>500 Million</span>
+                        <span>1 Trillion</span>
                         <h3>Maximum Supply</h3>
                         <div class="progress">
-                          <div class="progress-bar bg-full" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                          <div class="progress-bar bg-full" role="progressbar" aria-valuenow="0" aria-valuemin="0"
                             aria-valuemax="100"></div>
                         </div>
                       </div>
