--- a/index.html
+++ b/index.html
@@ -1272,7 +1272,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
               </a>
             </div>
             <div class="other--links">
-              <a href="#">White paper</a>
+              <iframe src="https://discord.com/widget?id=821844077343408138&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
               <a href="#">Support</a>
               <a href="#">API</a>
               <a href="#">Privacy Policy</a>
@@ -1280,8 +1280,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </div>
             <div class="opyright">
               <p>
-                © 2020
-                <a href="https://themeforest.net/user/orinostu" target="_blank">OrinoStu.</a>
+                © 2020 Galaxium
                 All Right Reseved
               </p>
             </div>
